Fix: unbuild problem

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,11 @@ include_directories(
 
 link_directories(${CMAKE_SOURCE_DIR}/unitree_legged_sdk/lib)
 
+set(EXTRA_LIBS -pthread libunitree_legged_sdk_amd64.so lcm)
+set(CMAKE_CXX_FLAGS "-O3")
+
+
 add_executable(robot_communication "src/robot_communication.cpp" "src/connection_to_robot.cpp")
 target_link_libraries(robot_communication ${EXTRA_LIBS} ${catkin_LIBRARIES})
 add_dependencies(robot_communication ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+
