--- a/robot_communication/config/config.yaml
+++ b/robot_communication/config/config.yaml
@@ -4,4 +4,5 @@ RobotFrame: "robot"
 OdometryTopic: "robot/odometry"
 VelocityTopic: "robot/target_velocity"
 
-ControlHZ: 100
+ControlHZ: 500 #100~1000
+OdometryHZ: 100
